Fix spacing

--- a/docs/sass/general.sass
+++ b/docs/sass/general.sass
@@ -13,7 +13,7 @@ html
   flex-direction: column
   align-items: center
   justify-content: flex-start
-  padding: $spacing-6 0
+  padding-top: $spacing-6
 
 .content__header
   display: flex
